--- a/client/src/Pages/video.css
+++ b/client/src/Pages/video.css
@@ -1,11 +1,18 @@
 .container {
   position: relative;
 }
-.container video {
+.container .video {
   position: fixed;
   z-index: 0;
-  max-width: fit-content;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* opacity: 0.9;*/
+  filter: blur(5px);
+  /* max-width: auto; */
+  /* height: auto; */
 }
+
 .overlay {
   position: relative;
   /* top: 0;
