--- a/client/src/static/nav.css
+++ b/client/src/static/nav.css
@@ -8,6 +8,7 @@
 }
 .tab:hover {
   color: #ea4f4c;
+  background-color: #222;
 }
 .body {
   font-family: "Roboto", sans-serif;
@@ -16,15 +17,17 @@
 .tab1 {
   border-radius: 5%;
   font-weight: bolder;
-  /* display: flex; */
+  display: flex;
   align-items: center;
-  /* text-decoration: underline; */
+  width: 100px;
   transition: all 0.3s ease-in-out;
   color: white;
   font-family: "Roboto", sans-serif;
+  background-color: black;
 }
 .tab1:hover {
-  font-weight: bolder;
-  color: #ea4f4c;
-  background-color: white;
+  /* font-weight: bolder; */
+  color: white;
+  background-color: #222 !important;
+  /* border: "2px"; */
 }
