--- a/client/src/Pages/video.css
+++ b/client/src/Pages/video.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  /* opacity: 0.9;*/
+  opacity: 0.7;
   filter: blur(1px);
   /* max-width: auto; */
   /* height: auto; */
